apps/gateway/gateway-core.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: core
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.nodes.ee"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.nodes.ee"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - name: core-tls
            kind: Secret
            group: ""
